# lsh

./: .gitignore  LICENSE  lib.lisp  lsh.cabal  lsh.prof  qsort.scm  ralala.scm  sort.lisp  sort.scm  std.scm  test.scm  test_lib.scm  toot.scm  toto.sh
src/: Environment.hs  Eval.hs  Expander.hs  LispVal.hs  Main.hs  Parser.hs  Pipes.hs  Primitives.hs  Process.hs  Pty.hs  bite.c  bite.h  pty.c  toto
